# Yukari

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  docs.md  format_code
Executables/Capture/: CMakeLists.txt  CaptureController.cpp  CaptureController.h  CaptureFactory.cpp  CaptureFactory.h  IPostCaptureTask.h  NDTIncrementalAlignment.cpp  NDTIncrementalAlignment.h  TaskNDTIncrementalAlignment.h  TaskSaveRawCloud.cpp  TaskSaveRawCloud.h  TaskSaveRawIMUFrame.cpp  TaskSaveRawIMUFrame.h  Types.h  main.cpp
Executables/CapturePointClouds/: CLITrigger.h  CMakeLists.txt  CaptureCLI.cpp  CaptureCLI.h  CaptureController.cpp  CaptureController.h  CaptureFactory.cpp  CaptureFactory.h  ITrigger.h  SignalTrigger.h  TimelapseCaptureTrigger.cpp  TimelapseCaptureTrigger.h  Types.h  main.cpp
Executables/CloudGrabberTest/: CMakeLists.txt  CloudGrabberVisualisation.cpp  CloudGrabberVisualisation.h  main.cpp
Executables/IMUGrabberTest/: CMakeLists.txt  VTKIMUActorCallback.cpp  VTKIMUActorCallback.h  VTKIMUCalibrationInteractionStyle.cpp  VTKIMUCalibrationInteractionStyle.h  main.cpp
Executables/IMUGrabberTestApp/: CMakeLists.txt  VTKIMUActorCallback.cpp  VTKIMUActorCallback.h  VTKIMUCalibrationInteractionStyle.cpp  VTKIMUCalibrationInteractionStyle.h  main.cpp
Executables/YukariCaptureApp/: CLITrigger.cpp  CLITrigger.h  CMakeLists.txt  CaptureCLI.cpp  CaptureCLI.h  CaptureController.cpp  CaptureController.h  CaptureFactory.cpp  CaptureFactory.h  ICaptureTrigger.h  ITrigger.h  SignalTrigger.cpp  TimelapseCaptureTrigger.cpp  TimelapseCaptureTrigger.h  main.cpp
Executables/YukariProcessingApp/: CMakeLists.txt  ProcessingCLI.cpp  ProcessingCLI.h  main.cpp
IMUDeviceTestApp/: CMakeLists.txt  VTKIMUActorCallback.cpp  VTKIMUActorCallback.h  VTKIMUCalibrationInteractionStyle.cpp  VTKIMUCalibrationInteractionStyle.h  main.cpp
KinectTestApp/: CMakeLists.txt  main.cpp
Libraries/YukariAlgorithms/: Add.cpp  Add.h  AlgorithmFactory.cpp  AlgorithmFactory.h  ApplyTransformationToCloud.cpp  ApplyTransformationToCloud.h  CMakeLists.txt  ConcatenatePointClouds.cpp  ConcatenatePointClouds.h  GenerateMeshFromPointCloud.cpp  GenerateMeshFromPointCloud.h  IMUFrameToEigenTransformation.cpp  IMUFrameToEigenTransformation.h  LoadPointCloud.cpp  LoadPointCloud.h  RemoveNaNFromPointCloud.cpp  RemoveNaNFromPointCloud.h  SaveVTKMesh.cpp  SaveVTKMesh.h  TriangulatePointCloud.cpp  TriangulatePointCloud.h
Libraries/YukariCLI/: CLI.cpp  CLI.h  CMakeLists.txt  Command.h  CommandContainer.cpp  CommandContainer.h  SubCommand.h
Libraries/YukariCaptureTriggers/: CLITrigger.cpp  CLITrigger.h  CMakeLists.txt  ITrigger.h  MSPAUXTrigger.cpp  MSPAUXTrigger.h  SignalTrigger.cpp  SignalTrigger.h  TimelapseCaptureTrigger.cpp  TimelapseCaptureTrigger.h
Libraries/YukariCloudCapture/: CMakeLists.txt  CloudGrabberFactory.h  DummyCloudGrabber.cpp  DummyCloudGrabber.h  ICloudGrabber.h  OpenNI2CloudGrabber.cpp  OpenNI2CloudGrabber.h  PCDFileCloudGrabber.h  PCLCloudGrabberWrapper.h
Libraries/YukariCommon/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  FilesystemHelpers.cpp  FilesystemHelpers.h  FilteredDirectoryIterator.h  LoggingService.cpp  LoggingService.h  MapHelpers.h  NamedDistLogSink.h  SignalBroker.cpp  SignalBroker.h  StringParsers.cpp  StringParsers.h  StringValueConversion.cpp  StringValueConversion.h
Libraries/YukariIMU/: CMakeLists.txt  DummyIMUGrabber.cpp  DummyIMUGrabber.h  ExtendedIMUFrame.cpp  ExtendedIMUFrame.h  FileIMUGrabber.cpp  FileIMUGrabber.h  IIMUGrabber.h  IMSPGrabber.cpp  IMSPGrabber.h  IMUConstants.h  IMUFrame.cpp  IMUFrame.h  IMUGrabberFactory.cpp  IMUGrabberFactory.h  ISerialGrabber.cpp  ISerialGrabber.h  MSPClient.cpp  MSPClient.h  MSPGrabber.cpp  MSPGrabber.h  MSPGrabberAttitude.cpp  MSPGrabberAttitude.h  MSPGrabberIMU.cpp  MSPGrabberIMU.h  STM32IMUDevice.cpp  STM32IMUDevice.h  TeensyIMUDevice.cpp  TeensyIMUDevice.h
Libraries/YukariMSP/: CMakeLists.txt  MSPClient.cpp  MSPClient.h  MSPParsers.cpp  MSPParsers.h
Libraries/YukariMaths/: CMakeLists.txt  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector3.cpp  Vector3.h  Vector4.h
Libraries/YukariProcessing/: CMakeLists.txt  CloudOperations.cpp  CloudOperations.h  DataStore.cpp  DataStore.h  FrameProcessingTaskFactory.cpp  FrameProcessingTaskFactory.h  GenerateMeshFromPointCloud.cpp  GenerateMeshFromPointCloud.h  IAlgorithm.cpp  IAlgorithm.h  IFrameProcessingTask.cpp  IFrameProcessingTask.h  ITaskAlignment.cpp  ITaskAlignment.h  ITaskIncrementalAlignment.cpp  ITaskIncrementalAlignment.h  ITaskNDTAlignment.h  ITaskWorldAlignment.cpp  ITaskWorldAlignment.h  PairRegistrationPointRepresentation.h  Property.cpp  Property.h  PropertyMapping.cpp  PropertyMapping.h  SpatialOperations.h  TaskAppendTransformedClouds.cpp  TaskAppendTransformedClouds.h  TaskDownsampleCloud.cpp  TaskDownsampleCloud.h  TaskFeatureIncrementalAlignment.cpp  TaskFeatureIncrementalAlignment.h  TaskICPIncrementalAlignment.cpp  TaskICPIncrementalAlignment.h  TaskICPWorldAlignment.cpp  TaskICPWorldAlignment.h  TaskNDTICPIncrementalAlignment.cpp  TaskNDTICPIncrementalAlignment.h  TaskNDTICPWorldAlignment.cpp  TaskNDTICPWorldAlignment.h  (+18 more)
Libraries/YukariTriggers/: CLITrigger.cpp  CLITrigger.h  CMakeLists.txt  ITrigger.h  PeriodicTrigger.cpp  PeriodicTrigger.h  ProxyTrigger.cpp  (+5 more)
YukariCommon/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h  LoggingService.cpp  LoggingService.h
YukariIMU/: CMakeLists.txt  ExtendedIMUFrame.cpp  ExtendedIMUFrame.h  IGrabber.h  IMUFrame.cpp  IMUFrame.h  IMUGrabberFactory.h  MSPClient.cpp  MSPClient.h  MSPGrabber.cpp  MSPGrabber.h  MSPGrabberAttitude.cpp  MSPGrabberAttitude.h  MSPGrabberIMU.cpp  MSPGrabberIMU.h
YukariMaths/: BaseMathType.cpp  BaseMathType.h  BaseVectorType.h  CMakeLists.txt  ExtendedIMUFrame.cpp  ExtendedIMUFrame.h  IMUFrame.cpp  IMUFrame.h  Matrix.cpp  Matrix.h  Matrix3.h  Matrix4.cpp  Matrix4.h  Quat.cpp  Quat.h  Quaternion.cpp  Quaternion.h  Units.h  Vector.cpp  Vector.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
(+197 files in other folders)
